Added Yandex auth

--- a/templates/users/pc/profile.html
+++ b/templates/users/pc/profile.html
@@ -70,27 +70,7 @@
         <div class="col">
             <h4 class="mb-4">Социальные сети</h4>
 
-            {% if 'vk-oauth2' in social %}
-                <img src="{% static 'images/icons/vk.png' %}"
-                     class="social-icon social-icon-connected"
-                     alt="VK">
-                <span data-toggle="tooltip" data-placement="top" title=""
-                      data-bs-original-title="VK подключен">
-                    <img src="{% static 'images/icons/tick.png' %}" class="email-icon"
-                         alt="VK connected">
-                </span>
-            {% else %}
-                <a href="{% url 'social:begin' 'vk-oauth2' %}">
-                    <img src="{% static 'images/icons/vk.png' %}"
-                         class="social-icon"
-                         alt="VK">
-                    <span data-toggle="tooltip" data-placement="top" title=""
-                          data-bs-original-title="Подключить VK">
-                        <img src="{% static 'images/icons/cross.png' %}" class="email-icon"
-                             alt="VK not connected">
-                    </span>
-                </a>
-            {% endif %}
+            {% include 'users/include/profile_social_icons.html' %}
         </div>
     </div>
 </div>
