--- a/templates/users/pc/login.html
+++ b/templates/users/pc/login.html
@@ -42,7 +42,8 @@
                 Забыли пароль?
             </a>
         </div>
-        {% include 'include/social_auth_icons.html' %}
+        <p class="text-secondary small mt-3">Войти через социальные сети:</p>
+        {% include 'users/include/login_social_icons.html' %}
     </form>
 </div>
 
