Added Yandex auth

--- a/templates/users/include/login_social_icons.html
+++ b/templates/users/include/login_social_icons.html
@@ -16,7 +16,7 @@
                  class="social-icon"
                  data-toggle="tooltip"
                  title="Войти через Яндекс"
-                 alt="VK">
+                 alt="Яндекс">
         </a>
     </div>
     <div class="col-4"></div>
