--- a/templates/users/include/login_social_icons.html
+++ b/templates/users/include/login_social_icons.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="row">
-    <div class="col-4"></div>
+    <div class="col-3"></div>
     <div class="col-2">
         <a href="{% url 'social:begin' 'vk-oauth2' %}">
             <img src="{% static 'images/icons/vk.png' %}"
@@ -19,5 +19,14 @@
                  alt="Яндекс">
         </a>
     </div>
-    <div class="col-4"></div>
+    <div class="col-2">
+        <a href="{% url 'social:begin' 'google-oauth2' %}">
+            <img src="{% static 'images/icons/google.png' %}"
+                 class="social-icon"
+                 data-toggle="tooltip"
+                 title="Войти через Google"
+                 alt="Google">
+        </a>
+    </div>
+    <div class="col-3"></div>
 </div>
