Added social auth to signup page

--- a/templates/users/mobile/signup.html
+++ b/templates/users/mobile/signup.html
@@ -36,5 +36,7 @@
             {% endfor %}
         </div>
         <input class="btn btn-apple mx-auto" type="submit" value="Зарегистрироваться"/>
+        <p class="text-secondary small mt-3">Зарегистрироваться через социальные сети:</p>
+        {% include 'users/include/login_social_icons.html' %}
     </form>
 </div>
