Social networks auth (#77)
* Installed social-auth-app-django

* Disabled EMAIL_MULTI_USER

* Update in user email policy

* Added VK auth

* Update social-auth-app config

* Added Yandex auth

* Added Google auth

* Design fix

--- a/templates/users/mobile/login.html
+++ b/templates/users/mobile/login.html
@@ -1,3 +1,6 @@
+{% load hosts %}
+{% load i18n %}
+{% load static %}
 {% if next %}
     {% if user.is_authenticated %}
         {% include "users/include/error_403.html" %}
@@ -28,6 +31,7 @@
                 Забыли пароль?
             </a>
         </div>
+        {% include 'users/include/login_social_icons.html' %}
     </form>
 </div>
 
