--- a/templates/users/pc/login.html
+++ b/templates/users/pc/login.html
@@ -1,3 +1,6 @@
+{% load hosts %}
+{% load static %}
+{% load i18n %}
 {% if next %}
     {% if user.is_authenticated %}
         {% include "users/include/error_403.html" %}
@@ -39,6 +42,8 @@
                 Забыли пароль?
             </a>
         </div>
+        <p class="text-secondary small mt-3">Войти через социальные сети:</p>
+        {% include 'users/include/login_social_icons.html' %}
     </form>
 </div>
 
