--- a/templates/base.html
+++ b/templates/base.html
@@ -6,17 +6,15 @@
     <title>{% block title %}FooDate{% endblock %}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
 
-    {% include 'include/yandex_metrica.html' %}
-
     <meta property="og:type" content="website">
     <meta property="og:title" content="FooDate">
-    <meta property="og:description" content="😋 Держите еду под контролем!">
+    <meta property="og:description" content="😋 В здоровом теле - здоровая еда!">
     <meta property="og:url" content="https://foodate.ru">
     <meta property="og:image" content="https://foodate.ru/static/images/logo/Preview.png">
     <meta property="og:site_name" content="FooDate">
     <meta property="og:locale" content="ru_RU">
 
-        {% load static %}
+    {% load static %}
         <script>
             const staticUrl = "{% get_static_prefix %}";
             const mediaUrl = "{% get_media_prefix %}";
