foodate@ya.ru changed to support@foodate.ru Fix #90

--- a/templates/mobile_footer.html
+++ b/templates/mobile_footer.html
@@ -6,9 +6,9 @@
     <div class="container">
         <div class="row my-3">
             <div class="col mb-1">
-                <a href="mailto:foodate@yandex.ru" class="d-flex flex-column align-items-center">
+                <a href="mailto:support@foodate.ru" class="d-flex flex-column align-items-center">
                     <img src="{% static 'images/icons/email.png' %}" class="icon" alt="E-mail">
-                    <span class="mt-2">foodate@yandex.ru</span>
+                    <span class="mt-2">support@foodate.ru</span>
                 </a>
             </div>
             <div class="col mb-1">
