--- a/templates/app_mobile/privacy-policy.html
+++ b/templates/app_mobile/privacy-policy.html
@@ -341,21 +341,21 @@
             9.1. Администрация вправе вносить изменения в настоящую Политику конфиденциальности
             без согласия Пользователя.
         </p>
-		<p>
+        <p>
             9.2. Новая Политика конфиденциальности вступает в силу с момента ее размещения
             на сайте FooDate, если иное не предусмотрено новой редакцией Политики
             конфиденциальности.
         </p>
-		<p>
+        <p>
             9.3. Все предложения или вопросы касательно настоящей Политики конфиденциальности
-            следует сообщать по адресу: <a href="mailto:foodate@yandex.ru">foodate@yandex.ru</a>
+            следует сообщать по адресу: <a href="mailto:support@foodate.ru">support@foodate.ru</a>
         </p>
-		<p>
+        <p>
             9.4. Действующая Политика конфиденциальности размещена на странице по адресу
             https://foodate.ru/privacy-policy
         </p>
 
-		<p>Обновлено: 26 Июля 2022 года</p>
+        <p>Обновлено: 26 Июля 2022 года</p>
 
     </div>
 {% endblock %}
