--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,9 +7,9 @@
         <div class="row my-3">
             <div class="col-auto"></div>
             <div class="col">
-                <a href="mailto:foodate@yandex.ru" class="d-flex flex-column align-items-center">
+                <a href="mailto:support@foodate.ru" class="d-flex flex-column align-items-center">
                     <img src="{% static 'images/icons/email.png' %}" class="icon" alt="E-mail">
-                    <span class="mt-2">foodate@yandex.ru</span>
+                    <span class="mt-2">support@foodate.ru</span>
                 </a>
             </div>
             <div class="col">
