--- a/templates/users/include/login_social_icons.html
+++ b/templates/users/include/login_social_icons.html
@@ -1,7 +1,6 @@
 {% load static %}
-<div class="row">
-    <div class="col-3"></div>
-    <div class="col-2">
+<div class="row mx-auto justify-content-center">
+    <div class="col-2 social-icon-col">
         <a href="{% url 'social:begin' 'vk-oauth2' %}">
             <img src="{% static 'images/icons/vk.png' %}"
                  class="social-icon"
@@ -10,7 +9,7 @@
                  alt="VK">
         </a>
     </div>
-    <div class="col-2">
+    <div class="col-2 social-icon-col">
         <a href="{% url 'social:begin' 'yandex-oauth2' %}">
             <img src="{% static 'images/icons/yandex.png' %}"
                  class="social-icon"
@@ -19,7 +18,7 @@
                  alt="Яндекс">
         </a>
     </div>
-    <div class="col-2">
+    <div class="col-2 social-icon-col">
         <a href="{% url 'social:begin' 'google-oauth2' %}">
             <img src="{% static 'images/icons/google.png' %}"
                  class="social-icon"
@@ -28,5 +27,4 @@
                  alt="Google">
         </a>
     </div>
-    <div class="col-3"></div>
 </div>
