--- a/templates/users/mobile/login.html
+++ b/templates/users/mobile/login.html
@@ -31,6 +31,7 @@
                 Забыли пароль?
             </a>
         </div>
+        <p class="text-secondary small mt-3">Войти через социальные сети:</p>
         {% include 'users/include/login_social_icons.html' %}
     </form>
 </div>
