--- a/templates/users/pc/signup.html
+++ b/templates/users/pc/signup.html
@@ -15,7 +15,7 @@
         <div class="row mb-3">
             <div class="col-2"></div>
             <div class="col-1">
-                Email:
+                <label for="id_email">Email:</label>
             </div>
             <div class="col-8">
                 {{ form.email }}
