Implemented automatic deletion for "Guest" users

--- a/templates/app/app.html
+++ b/templates/app/app.html
@@ -70,7 +70,7 @@
                                     {{ form.amount }}
                                     <span class="mx-2"></span>{{ form.amount_unit }}
                                 </div>
-                                {{ form.amount.errors}}
+                                {{ form.amount.errors }}
                                 {{ form.amount_unit.errors }}
                             </div>
                             <div class="row">
@@ -115,4 +115,20 @@
         {% endif %}
     {% endif %}
     <script type="text/babel" src="{% static 'js/app/app.js' %}"></script>
+
+    {% if user.is_guest %}
+        <!-- Guest cleanup -->
+        <script language="JavaScript">
+            window.onbeforeunload = function (e) {
+                $.ajax({
+                    url: '{% url 'clean-guests' %}'.split(':')[1],
+                    type: 'POST',
+                    headers: {
+                        "X-CSRFToken": csrftoken,
+                    },
+                    mode: 'same-origin',
+                });
+            };
+        </script>
+    {% endif %}
 {% endblock %}
