--- a/templates/book/product.html
+++ b/templates/book/product.html
@@ -4,23 +4,25 @@
 {% load duration %}
 
 {% block title %}
-    {{ product.name }}
+    {{ item.name }}
 {% endblock %}
 
 {% block description %}
-    Информация о продукте "{{ product.name }}".
+    Информация о продукте "{{ item.name }}".
 {% endblock %}
 
 {% block content %}
-    <link href="{% static 'css/book/product.css' %}" rel="stylesheet">
+    {% with product=item %}
 
-    <div class="container-fluid text-center">
-        <h3>{{ product.name }}</h3>
-        <hr>
-        <div class="row">
-            {% if product.image %}
-                <div class="col-6">
-                    <div class="row d-flex align-items-center h-50">
+        <link href="{% static 'css/book/product.css' %}" rel="stylesheet">
+
+        <div class="container-fluid text-center">
+            <h3>{{ product.name }}</h3>
+            <hr>
+            <div class="row">
+                {% if product.image %}
+                    <div class="col-6">
+                        <div class="row d-flex align-items-center h-50">
                         <img src="{% uploads product.image %}" alt="{{ product.name }}"
                          class="img-fluid product-img w-auto">
                     </div>
@@ -111,7 +113,7 @@
                     {% if product.composition %}
                         <tr class="accordion" id="composition-example">
                             <td class="align-top">
-                                Cостав
+                                Состав
                             </td>
                             <td class="text-start">
                                 <p>{{ product.composition|capfirst }}</p>
@@ -162,14 +164,8 @@
                 </div>
             {% endif %}
         </div>
-    </div>
-    <script>
-        let minStorageTemperature = '{{ product.min_storage_temperature }}';
-        let maxStorageTemperature = '{{ product.max_storage_temperature }}';
-        let storageTemperatureUnit = '{{ product.storage_temperature_unit }}';
-        let energyValue = '{{ product.energy_value }}';
-        let energyValueUnit = '{{ product.energy_value_unit }}'
-    </script>
-    <script type="text/javascript" src="{% static 'js/constants.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/book/product.js' %}"></script>
+        </div>
+        {% include 'book/include/unit_change_scripts.html' %}
+
+    {% endwith %}
 {% endblock %}
