Added contact form

--- a/templates/app/homepage.html
+++ b/templates/app/homepage.html
@@ -119,14 +119,25 @@
         <div class="row text-center text-apple justify-content-center">
             <h5 class="balsamiq text-secondary">Заинтересованы?</h5>
             <h3 class="balsamiq">Повлияйте на создание продукта!</h3>
-            <p class="small text-secondary">После регистрации укажите в профиле, чем можете помочь проекту. Мы с Вами
-                свяжемся.</p>
+            <p class="small text-secondary">
+                После регистрации укажите в профиле, чем можете помочь проекту.
+                Мы с Вами свяжемся.
+            </p>
             <div class="row justify-content-center">
                 <a href="{% url 'signup' host 'app' %}"
                    class="btn btn-apple w-auto px-4 py-2">
                     <h2 class="text-center balsamiq mb-0">
-                        Регистрация
+                        Зарегистрируйтесь
                     </h2>
+                </a>
+            </div>
+            <p class="mt-2">или</p>
+            <div class="row justify-content-center">
+                <a href="https://forms.yandex.ru/u/637a5fb4d046888a679a35fd/"
+                   class="btn btn-apple w-auto px-4 py-2">
+                    <h3 class="text-center balsamiq mb-0">
+                        Оставьте контакты
+                    </h3>
                 </a>
             </div>
         </div>
