--- a/templates/app_mobile/homepage.html
+++ b/templates/app_mobile/homepage.html
@@ -122,7 +122,7 @@
             <hr class="text-apple text-center">
         </div>
         <div class="row text-center text-apple justify-content-center">
-            <h4 class="balsamiq text-secondary">Заинтересованы?</h4>
+            <h5 class="balsamiq text-secondary fs-5">Заинтересованы?</h5>
             <h3 class="balsamiq">Повлияйте на создание продукта!</h3>
             <p class="small text-secondary">После регистрации укажите в профиле, чем можете помочь проекту.<br>
                 Мы с Вами свяжемся.</p>
@@ -130,8 +130,17 @@
                 <a href="{% url 'signup' host 'app' %}"
                    class="btn btn-apple w-auto px-4 py-2">
                     <h2 class="text-center balsamiq mb-0">
-                        Регистрация
+                        Зарегистрируйтесь
                     </h2>
+                </a>
+            </div>
+            <p class="mt-2">или</p>
+            <div class="row justify-content-center">
+                <a href="https://forms.yandex.ru/u/637a5fb4d046888a679a35fd/"
+                   class="btn btn-apple w-auto px-4 py-2">
+                    <h3 class="text-center balsamiq mb-0">
+                        Оставьте контакты
+                    </h3>
                 </a>
             </div>
         </div>
