Added Metrika register goal

--- a/templates/users/pc/signup.html
+++ b/templates/users/pc/signup.html
@@ -1,7 +1,10 @@
 <div class="mt-5 mx-auto text-center">
     <h3 class="mb-5">Регистрация</h3>
 
-    <form method="post" class="form-control mx-auto text-center" style="max-width: 500px">
+    <form method="post"
+          class="form-control mx-auto text-center"
+          style="max-width: 500px"
+          onsubmit="yaCounter89625714.reachGoal('RegisterForm'); return true">
         {% csrf_token %}
         <div class="row mb-3">
             <div class="col-2"></div>
