Added Metrika register goal

--- a/templates/users/pc/signup.html
+++ b/templates/users/pc/signup.html
@@ -4,7 +4,7 @@
     <form method="post"
           class="form-control mx-auto text-center"
           style="max-width: 500px"
-          onsubmit="yaCounter89625714.reachGoal('RegisterForm'); return true">
+          onsubmit="ym(89625714,'reachGoal','RegisterForm')">
         {% csrf_token %}
         <div class="row mb-3">
             <div class="col-2"></div>
