--- a/templates/users/mobile/signup.html
+++ b/templates/users/mobile/signup.html
@@ -3,7 +3,7 @@
     <hr>
     <form method="post"
           class="form-control"
-          onsubmit="yaCounter89625714.reachGoal('RegisterForm'); return true">
+          onsubmit="ym(89625714,'reachGoal','RegisterForm')">
         {% csrf_token %}
         <div class="row mb-3">
             <label for="id_username">Логин:</label>
